--- a/WorkflowR.Worklows.Presentation/WorkflowR.Worklows.Presentation.csproj
+++ b/WorkflowR.Worklows.Presentation/WorkflowR.Worklows.Presentation.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
@@ -16,6 +17,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WorkflowR.Workflows.Infrastructure\WorkflowR.Workflows.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Endpoints\" />
   </ItemGroup>
 
 </Project>
