--- a/WorkflowR.Workflows.Infrastructure/WorkflowR.Workflows.Infrastructure.csproj
+++ b/WorkflowR.Workflows.Infrastructure/WorkflowR.Workflows.Infrastructure.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WorkflowR.Workflows.Application\WorkflowR.Workflows.Application.csproj" />
   </ItemGroup>
 
