5 workflows implement grapql interface (#9)
* 5: Init graphql

* Refactored and added mutations

--- a/WorkflowR.Worklows.Presentation/WorkflowR.Worklows.Presentation.csproj
+++ b/WorkflowR.Worklows.Presentation/WorkflowR.Worklows.Presentation.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\WorkflowR.Workflows.Infrastructure\WorkflowR.Workflows.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Endpoints\" />
+  </ItemGroup>
+
 </Project>
