6: added entity framework core

--- a/WorkflowR.Worklows.Presentation/appsettings.json
+++ b/WorkflowR.Worklows.Presentation/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionSetting": "Server=localhost:1433;Database=Workflows;User Id=sql1;Password=Test1234!;"
 }
