--- a/WorkflowR.Workflows.Infrastructure/WorkflowR.Workflows.Infrastructure.csproj
+++ b/WorkflowR.Workflows.Infrastructure/WorkflowR.Workflows.Infrastructure.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.AspNetCore" Version="13.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
