--- a/WorkflowR.Worklows.Presentation/WorkflowR.Worklows.Presentation.csproj
+++ b/WorkflowR.Worklows.Presentation/WorkflowR.Worklows.Presentation.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
