--- a/WorkflowR.Worklows.Presentation/appsettings.json
+++ b/WorkflowR.Worklows.Presentation/appsettings.json
@@ -5,17 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "https_port": 443,
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://localhost:80"
-      },
-      "Https": {
-        "Url": "https://localhost:443"
-      }
-    }
-  },
   "AllowedHosts": "*",
-  "ConnectionStringOption": "Server=localhost;Database=Workflows;User Id=sa;Password=Test1234!;TrustServerCertificate=True;"
+  "ConnectionStringOption": "Server=mssql;Database=Workflows;User Id=sa;Password=Test1234!;TrustServerCertificate=True;"
 }
