--- a/WorkflowR.Worklows.Presentation/appsettings.json
+++ b/WorkflowR.Worklows.Presentation/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStringOption": "Server=localhost;Database=Workflows;User Id=sa;Password=Test1234!;TrustServerCertificate=True;"
+  "ConnectionStringOption": "Server=mssql;Database=Workflows;User Id=sa;Password=Test1234!;TrustServerCertificate=True;"
 }
